Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
============================
HYPERMAIL VERSION 2.4.0:
============================

2018-10-04 Jose Kahan

	* Updated Changelog format for entries newer than version 2.3.0

	* hypermail.h, parse.c, struct.c, struct.h
	Charset handling for multipart messages was being handled wrong, giving
	priority to the headers charset (if found) over that of the displayed body.
	Sometimes the last found charset was the one being used throughout in the
	generated body.
	The metafile for attachments was sometimes inheriting the charset of the whole
	body, even when not necessary or wrong. Now the meta doesn't include a charset
	if the attachment doesn't explicitly give one.

	* parse.c
	References header was processed multiple times as it was not being marked as parsed
	after being processed.

2018-06-19 Jose Kahan

	* Changed mispelled configuration option warn_surpressions to the
	correct spelling warn_suppressions.

2018-06-14 Jose Kahan

	* Hypermail would segfault or have an incorrect thread view if it was
	handling an archive with a message (msg1) that was a reply to a message
	not in the archive, if msg1 had a reply to it in the archive (msg2),
	msg2 was archived before msg1 and both msg1 and msg2 shared the same
	subject (regardless of Re: prefixes).

2018-06-07 Bill Shannon

	* Add charset alias for Thai and Chinese

	* The markup for access key "j" to jump to the start of a message was
	only being added when the showhtml configuration option was disabled

	* Setting the describe_folder configuration option has no effect on the
	display of the folder index page

	* In some cases hypermail failed to null terminate the charset name
	when copying it, resulting in bogus charset names

	* Hypermail would segfault if given the bogus From line "From:
	<a@b.com"

	* In some cases, when no new message was added to the archive, would
	segfault because of a null pointer

2015-04-03 Ivan Kuraj
